# plus_ev_code_base

./: .gitignore  Dockerfile  dependency_fix_script.py  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
live_trading_system/financial_app/: .env  .gitignore  Makerfile  __init__.py  alembic.ini  check_version_table.py  conftest.py  db_connection_fix.py  debug_path.py  docker-compose.yml  manual_migration.py  pyproject.toml  pytest.ini  requirements.txt  reset_migration.py  run_app.py  run_tests.py  setup.py  setup_db.py  test_db.py  test_login_api.py  test_supabase_connection.py  verify_migration.py  view_metrics.py
live_trading_system/financial_app/app/: __init__.py  main.py  test_connection_db.py
live_trading_system/financial_app/app/api/: __init__.py  router.py
live_trading_system/financial_app/app/code_documentation/: auth_flow_viz.tsx
live_trading_system/financial_app/app/consumers/: __init__.py
live_trading_system/financial_app/app/core/: __init__.py  circuit_breaker.py  config.py  database.py  error_handling.py  migrations.py  security.py  test_settings.py  timescale.py
live_trading_system/financial_app/app/db/: commands.py
live_trading_system/financial_app/app/middleware/: __init__.py  auth.py  error_middleware.py  rate_limit.py
live_trading_system/financial_app/app/models/: __init__.py  account.py  backtest.py  base.py  fyers_token.py  market_data.py  orders.py  (+3 more)
live_trading_system/financial_app/config/: broker_config.yaml
live_trading_system/financial_app/tests/: conftest.py  shell_test_deploy_migrations.sh  test_debug.py
(+283 files in other folders)
