[tool.poetry]
name = "financial_app"
version = "0.1.0"
description = "Trading Strategies Application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
redis = "^4.5.5"
pymongo = "^4.4.0"
psycopg2-binary = "^2.9.6"
kafka-python = "^2.0.2"
argon2-cffi = "^21.3.0"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
termcolor = "^2.4.0"
aioresponses = "^0.7.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

